--- a/static/pdf/Day2/Day2.html
+++ b/static/pdf/Day2/Day2.html
@@ -149,8 +149,8 @@ class: center, bottom, inverse
 
 
 
-<div id="htmlwidget-9df9d798851f3bc3c2a9" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-9df9d798851f3bc3c2a9">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24"],[1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880],["F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F"],["Mary","Anna","Emma","Elizabeth","Minnie","Margaret","Ida","Alice","Bertha","Sarah","Annie","Clara","Ella","Florence","Cora","Martha","Laura","Nellie","Grace","Carrie","Maude","Mabel","Bessie","Jennie"],[7065,2604,2003,1939,1746,1578,1472,1414,1320,1288,1258,1226,1156,1063,1045,1040,1012,995,982,949,858,808,796,793],[0.07238359,0.02667896,0.02052149,0.01986579,0.01788843,0.0161672,0.01508119,0.01448696,0.0135239,0.01319605,0.01288868,0.01256083,0.01184366,0.01089084,0.01070642,0.01065519,0.01036832,0.01019415,0.01006096,0.00972286,0.00879053,0.00827826,0.00815532,0.00812458]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>year<\/th>\n      <th>sex<\/th>\n      <th>name<\/th>\n      <th>n<\/th>\n      <th>prop<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":6,"columnDefs":[{"className":"dt-right","targets":[1,4,5]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[6,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-e89a04ccb155ba075512" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-e89a04ccb155ba075512">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24"],[1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880,1880],["F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F"],["Mary","Anna","Emma","Elizabeth","Minnie","Margaret","Ida","Alice","Bertha","Sarah","Annie","Clara","Ella","Florence","Cora","Martha","Laura","Nellie","Grace","Carrie","Maude","Mabel","Bessie","Jennie"],[7065,2604,2003,1939,1746,1578,1472,1414,1320,1288,1258,1226,1156,1063,1045,1040,1012,995,982,949,858,808,796,793],[0.07238359,0.02667896,0.02052149,0.01986579,0.01788843,0.0161672,0.01508119,0.01448696,0.0135239,0.01319605,0.01288868,0.01256083,0.01184366,0.01089084,0.01070642,0.01065519,0.01036832,0.01019415,0.01006096,0.00972286,0.00879053,0.00827826,0.00815532,0.00812458]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>year<\/th>\n      <th>sex<\/th>\n      <th>name<\/th>\n      <th>n<\/th>\n      <th>prop<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":6,"columnDefs":[{"className":"dt-right","targets":[1,4,5]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[6,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 
 
 --
@@ -194,7 +194,7 @@ Please git clone this repository to your local folder.
 
 ![](images/01-githubpage.png)
 
-<div class="countdown" id="timer_61d8d2b5" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61d8d6f6" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -286,7 +286,7 @@ To Do:
 - Change the parameters and output types!!
 - Try 'Knit with Parameters'
 
-<div class="countdown" id="timer_61d8d102" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61d8d59b" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">06</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -593,7 +593,7 @@ Customize this report
 
 1. Add it to a global setup chunk instead
 
-<div class="countdown" id="timer_61d8d39e" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61d8d4e9" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
