--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -302,7 +302,7 @@ Before next class Students are expected to open a GitHub account, verify it, and
   
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week1/" />
-  <meta property="og:title" content="Week 1 (In progress!) | Deepak Bastola" />
+  <meta property="og:title" content="Week 1 | Deepak Bastola" />
   <meta property="og:description" content="Wednedsay, 01/05 Welcome!
 Day 1 Slides
 Before next class Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
@@ -328,7 +328,7 @@ Before next class Students are expected to open a GitHub account, verify it, and
 
 
 
-  <title>Week 1 (In progress!) | Deepak Bastola</title>
+  <title>Week 1 | Deepak Bastola</title>
 </head>
 
 
@@ -800,7 +800,7 @@ Before next class Students are expected to open a GitHub account, verify it, and
 
           
 
-          <h1>Week 1 (In progress!)</h1>
+          <h1>Week 1</h1>
 
           <div class="article-style">
             <h2 id="wednedsay-0105">Wednedsay, 01/05</h2>
@@ -835,7 +835,6 @@ Before next class Students are expected to open a GitHub account, verify it, and
 <p>Day 2 Slides (<a href="/pdf/Day2/Day2.pdf" target="_blank">pdf</a>/<a href="/pdf/Day2/Day2.html" target="_blank">html</a>)</p>
 <p>Optional (if you need more review):</p>
 <p>If it has been a LONG time since you took STAT 120 or used R, then this crash course is helpful: <a href="https://rstudio.cloud/learn/primers/1.2" target="_blank" rel="noopener">programming basics primer from RStudio</a>. These resources are also useful if you feel like you are starting from scratch: <a href="https://ismayc.github.io/rbasics-book/3-rstudiobasics.html" target="_blank" rel="noopener">R and RStudio Basics</a> and <a href="https://ismayc.github.io/rbasics-book/4-rmarkdown.html" target="_blank" rel="noopener">R Markdown</a>.</p>
-<p>See you in class!</p>
 
           </div>
 
