--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -61,7 +61,7 @@
     
   
   <meta name="description" content="Monday 01/10
- Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Chapter 25.   " />
+Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Chapter 25.   It is useful to go over this interesting video on Basics of ggplot2 before class." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week2/" />
@@ -303,7 +303,7 @@
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week2/" />
   <meta property="og:title" content="Week 2 | Deepak Bastola" />
   <meta property="og:description" content="Monday 01/10
- Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Chapter 25.   " /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Chapter 25.   It is useful to go over this interesting video on Basics of ggplot2 before class." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -806,11 +806,14 @@
 
           <div class="article-style">
             <p>Monday 01/10</p>
+<h3 id="before-class">Before Class</h3>
 <div class="alert alert-note">
   <div>
     Please read <a href="https://r4ds.had.co.nz/data-visualisation.html#introduction-1">GW Chapter 3</a>, <a href="https://r4ds.had.co.nz/graphics-for-communication.html">GW Chapter 28</a> and <a href="https://stat545.com/colors.html">Jenny Bryan&rsquo;s Chapter 25</a>.
   </div>
 </div>
+<p>It is useful to go over this interesting video on <a href="https://www.youtube.com/watch?v=FdVy57oGJuc" target="_blank" rel="noopener">Basics of ggplot2</a> before class.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FdVy57oGJuc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           </div>
 
