--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -813,7 +813,7 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
   </div>
 </div>
 <p>It is useful to go over this interesting video on <a href="https://www.youtube.com/watch?v=FdVy57oGJuc" target="_blank" rel="noopener">Basics of ggplot2</a> before class.</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/FdVy57oGJuc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FdVy57oGJuc?start=43" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           </div>
 
