--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -814,6 +814,7 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
 </div>
 <p>It is useful to go over this interesting video on <a href="https://www.youtube.com/watch?v=FdVy57oGJuc" target="_blank" rel="noopener">Basics of ggplot2</a> before class.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/FdVy57oGJuc?start=43" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p>Also, please start to work on HW1 that will be due at 10 PM on Wednesday, 01/12. You are required to submit the HW via GitHub (i.e., push your submission to the GitHub repo named &lsquo;hw1-username&rsquo; under the class GitHub organization, <a href="https://github.com/orgs/stat220/" target="_blank" rel="noopener">Stat220</a>). I will also post the first group assignment shortly.</p>
 
           </div>
 
