--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -824,6 +824,14 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
 <ul>
 <li>Link to <a href="https://github.com/stat220/02-DataObj_Viz_Activity" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
+<p>Wednesday, 01/12</p>
+<h3 id="before-class-1">Before Class</h3>
+<p>We learned about basic on R objects and just scratched the surface of data visualization using <code>ggplot2</code>. We will delve deeply into &lsquo;ggplot2&rsquo; in this class.</p>
+<div class="alert alert-note">
+  <div>
+    Continue reading <a href="https://r4ds.had.co.nz/data-visualisation.html#introduction-1">GW Chapter 3</a>, <a href="https://r4ds.had.co.nz/graphics-for-communication.html">GW Chapter 28</a>, and <a href="https://rafalab.github.io/dsbook/data-visualization-principles.html">Irizarry Chapter 10</a>
+  </div>
+</div>
 
           </div>
 
