--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -834,7 +834,7 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
 </div>
 <h3 id="in-class-1">In Class</h3>
 <ul>
-<li>More <code>ggplot</code> layers</li>
+<li>More <code>ggplot2</code> layers</li>
 <li>Advanced visualizations</li>
 </ul>
 <p>Day 4 Slides (<a href="/pdf/Day4/Day4.html" target="_blank">html</a>)</p>
