--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -826,7 +826,7 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
 </ul>
 <p>Wednesday, 01/12</p>
 <h3 id="before-class-1">Before Class</h3>
-<p>We learned about basics of R objects and just scratched the surface of data visualization using <code>ggplot2</code>. We will delve deeply into &lsquo;ggplot2&rsquo; in this class.</p>
+<p>We learned about basics of R objects and just scratched the surface of data visualization using <code>ggplot2</code>. We will delve deeply into <code>ggplot2</code> in this class.</p>
 <div class="alert alert-note">
   <div>
     Continue reading <a href="https://r4ds.had.co.nz/data-visualisation.html#introduction-1">GW Chapter 3</a>, <a href="https://r4ds.had.co.nz/graphics-for-communication.html">GW Chapter 28</a>, and <a href="https://rafalab.github.io/dsbook/data-visualization-principles.html">Irizarry Chapter 10</a>
