--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -841,6 +841,17 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
 <ul>
 <li>Link to <a href="https://github.com/stat220/03-visualization-activity" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
+<p>Friday, 01/14</p>
+<h3 id="before-class-2">Before Class</h3>
+<ul>
+<li>Go over previous in-class activities, lectures.</li>
+<li>Start working on Gruop HW 1.</li>
+</ul>
+<div class="alert alert-note">
+  <div>
+    Please skim through <a href="https://clauswilke.com/dataviz/coordinate-systems-axes.html">Coordinate Systems and Axes</a>, <a href="https://clauswilke.com/dataviz/geospatial-data.html">Visualizing Spatial Data</a> and <a href="https://rstudio.github.io/leaflet/">Leaflet R Package</a>
+  </div>
+</div>
 
           </div>
 
