--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -845,7 +845,7 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
 <h3 id="before-class-2">Before Class</h3>
 <ul>
 <li>Go over previous in-class activities, lectures.</li>
-<li>Start working on Gruop HW 1.</li>
+<li>Start working on Group HW 1.</li>
 </ul>
 <div class="alert alert-note">
   <div>
