--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -820,7 +820,7 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
 <li>Basic R Objects</li>
 <li>Basic Visualizations with <code>ggplot2</code></li>
 </ul>
-<p>Day 3 Slides (<a href="/pdf/Day3/Day3.html" target="_blank">html</a>)</p>
+<p>Day 3 Slides (<a href="/pdf/Day3/Day3.pdf" target="_blank">pdf</a>/<a href="/pdf/Day3/Day3.html" target="_blank">html</a>)</p>
 <ul>
 <li>Link to <a href="https://github.com/stat220/02-DataObj_Viz_Activity" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
@@ -837,7 +837,7 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
 <li>More <code>ggplot2</code> layers</li>
 <li>Advanced visualizations</li>
 </ul>
-<p>Day 4 Slides (<a href="/pdf/Day4/Day4.html" target="_blank">html</a>)</p>
+<p>Day 4 Slides (<a href="/pdf/Day4/Day4.pdf" target="_blank">pdf</a>/<a href="/pdf/Day4/Day4.html" target="_blank">html</a>)</p>
 <ul>
 <li>Link to <a href="https://github.com/stat220/03-visualization-activity" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
@@ -858,7 +858,7 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
 <li>More advanced maps</li>
 <li>Simple interactive maps with <code>leaflet</code></li>
 </ul>
-<p>Day 5 Slides (<a href="/pdf/Day5/Day5.html" target="_blank">html</a>)</p>
+<p>Day 5 Slides (<a href="/pdf/Day5/Day5.pdf" target="_blank">pdf</a>/<a href="/pdf/Day5/Day5.html" target="_blank">html</a>)</p>
 <ul>
 <li>Link to <a href="https://github.com/stat220/04-more-visualizations" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
