--- a/public/pdf/Day4/Day4.html
+++ b/public/pdf/Day4/Day4.html
@@ -18,7 +18,7 @@ class: center, top, my-title, title-slide
 # Graphics with ggplot2
 ## <br/> STAT 220
 ### Bastola
-### January 12 2022
+### January 16 2022
 
 ---
 
@@ -264,7 +264,7 @@ The data frame in this exercise is called `datasaurus_dozen` and it's in the `da
 ]
 
 .pull-right[
-<div class="countdown" id="timer_61deff8c" style="top:1;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61e44f0b" style="top:1;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -551,7 +551,7 @@ class: action
 
 &lt;img src="Day4_files/figure-html/unnamed-chunk-30-1.svg" style="display: block; margin: auto;" /&gt;
 
-<div class="countdown" id="timer_61deff50" style="bottom:0;left:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61e451a8" style="bottom:0;left:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -620,7 +620,7 @@ class: action
 
 &lt;img src="Day4_files/figure-html/unnamed-chunk-35-1.svg" style="display: block; margin: auto;" /&gt;
 
-<div class="countdown" id="timer_61df0048" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61e45150" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -651,13 +651,12 @@ class: action
 
 # Your Turn 4
 
-The provides values for life expectancy, GDP per capita, and population, every five years, from 1960 to 2018
-Use `gapminder` dataset to answer the given set of problems.
+The `gapminder` dataset provides values for life expectancy, GDP per capita, and population, every five years, from 1960 to 2018. Use `gapminder` dataset to answer the given set of problems.
 
 &lt;img src="Day4_files/figure-html/unnamed-chunk-37-1.svg" style="display: block; margin: auto;" /&gt;
 
 
-<div class="countdown" id="timer_61defcb0" style="bottom:0;left:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61e4502d" style="bottom:0;left:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
