--- a/public/pdf/Day5/Day5.html
+++ b/public/pdf/Day5/Day5.html
@@ -29,7 +29,7 @@ class: center, top, my-title, title-slide
 # More Data Visualization Tools
 ## <br/> STAT 220
 ### Bastola
-### January 14 2022
+### January 16 2022
 
 ---
 
@@ -278,7 +278,7 @@ Please git clone the repository [More visualizations](https://github.com/stat220
 
 &lt;img src="Day5_files/figure-html/unnamed-chunk-4-1.svg" width="60%" style="display: block; margin: auto;" /&gt;
 
-<div class="countdown" id="timer_61e1aa1f" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61e45157" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -623,7 +623,7 @@ Use American Community Survey (ACS) data to complete this exercise.
 &lt;img src="Day5_files/figure-html/unnamed-chunk-26-1.svg" style="display: block; margin: auto;" /&gt;
 
 
-<div class="countdown" id="timer_61e1a9d2" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61e44ea6" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">06</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
