--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -60,7 +60,8 @@
   
     
   
-  <meta name="description" content="Monday 01/10
+  <meta name="description" content="Monday, 01/10
+Monday, 01/10.
 Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Chapter 25.   It is useful to go over this interesting video on Basics of ggplot2 before class." />
 
   
@@ -302,7 +303,8 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week2/" />
   <meta property="og:title" content="Week 2 | Deepak Bastola" />
-  <meta property="og:description" content="Monday 01/10
+  <meta property="og:description" content="Monday, 01/10
+Monday, 01/10.
 Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Chapter 25.   It is useful to go over this interesting video on Basics of ggplot2 before class." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
@@ -805,7 +807,8 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
           <h1>Week 2</h1>
 
           <div class="article-style">
-            <p>Monday 01/10</p>
+            <p>Monday, 01/10</p>
+<p><span style="color:orange">Monday, 01/10</span>.</p>
 <h3 id="before-class">Before Class</h3>
 <div class="alert alert-note">
   <div>
