--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -704,6 +704,10 @@ ggplot Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.
       
 
 
+  <li class=""><a href="/courses/stat220/week3/">Week 3</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week2/">Week 2</a></li>
 
 
