--- a/public/courses/stat220/github-in-stat-220/index.html
+++ b/public/courses/stat220/github-in-stat-220/index.html
@@ -705,6 +705,10 @@
       
 
 
+  <li class=""><a href="/courses/stat220/week3/">Week 3</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week2/">Week 2</a></li>
 
 
