--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -61,7 +61,7 @@
     
   
   <meta name="description" content="Monday, 01/17
-Before Class  Please read GW Chapter 5, (optional) Irizarry Sections 4.1-4.11, and start working on individual HW2.   Also, it may be useful to go over this interesting video on Basics of dplyr before class." />
+Before Class  Please read GW Chapter 5, Irizarry Sections 4.1-4.11(optional), and start working on individual HW2.   Also, it may be useful to go over this interesting video on Basics of dplyr before class." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week3/" />
@@ -303,7 +303,7 @@ Before Class  Please read GW Chapter 5, (optional) Irizarry Sections 4.1-4.11, a
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week3/" />
   <meta property="og:title" content="Week 3 | Deepak Bastola" />
   <meta property="og:description" content="Monday, 01/17
-Before Class  Please read GW Chapter 5, (optional) Irizarry Sections 4.1-4.11, and start working on individual HW2.   Also, it may be useful to go over this interesting video on Basics of dplyr before class." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Before Class  Please read GW Chapter 5, Irizarry Sections 4.1-4.11(optional), and start working on individual HW2.   Also, it may be useful to go over this interesting video on Basics of dplyr before class." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -813,7 +813,7 @@ Before Class  Please read GW Chapter 5, (optional) Irizarry Sections 4.1-4.11, a
 <h3 id="before-class">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Please read <a href="https://r4ds.had.co.nz/transform.html">GW Chapter 5</a>, (optional) <a href="https://rafalab.github.io/dsbook/tidyverse.html">Irizarry Sections 4.1-4.11</a>, and start working on individual HW2.
+    Please read <a href="https://r4ds.had.co.nz/transform.html">GW Chapter 5</a>, <a href="https://rafalab.github.io/dsbook/tidyverse.html">Irizarry Sections 4.1-4.11</a>(optional), and start working on individual HW2.
   </div>
 </div>
 <p>Also, it may be useful to go over this interesting video on <a href="https://www.youtube.com/watch?v=BaFkbNOaof8" target="_blank" rel="noopener">Basics of <code>dplyr</code></a> before class.</p>
