--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -61,7 +61,7 @@
     
   
   <meta name="description" content="R markdown Cheatsheet
-ggplot Cheatsheet
+ggplot2 Cheatsheet
 dplyr Cheatsheet" />
 
   
@@ -304,7 +304,7 @@ dplyr Cheatsheet" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/cheatsheets/" />
   <meta property="og:title" content="Link to cheatsheets | Deepak Bastola" />
   <meta property="og:description" content="R markdown Cheatsheet
-ggplot Cheatsheet
+ggplot2 Cheatsheet
 dplyr Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
@@ -812,7 +812,7 @@ dplyr Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.a
 
           <div class="article-style">
             <p><a href="/cheatsheets/rmarkdown-2.0.pdf" target="_blank">R markdown Cheatsheet</a></p>
-<p><a href="/cheatsheets/data-visualization.pdf" target="_blank"><code>ggplot</code> Cheatsheet</a></p>
+<p><a href="/cheatsheets/data-visualization.pdf" target="_blank"><code>ggplot2</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/data-transformation.pdf" target="_blank"><code>dplyr</code> Cheatsheet</a></p>
 
           </div>
