--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -827,6 +827,8 @@ Before Class  Please read GW Chapter 5, Irizarry Sections 4.1-4.11(optional), an
 <ul>
 <li>Link to <a href="https://github.com/stat220/05-Data-Wrangling" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
+<p><span style="color:orange"><strong>Wednesday, 01/19</strong></span></p>
+<p>Finish HW2 by 10 PM, and start working on Group HW2. The first midterm will be held in class on Friday, 01/22.</p>
 
           </div>
 
