--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -828,7 +828,13 @@ Before Class  Please read GW Chapter 5, Irizarry Sections 4.1-4.11(optional), an
 <li>Link to <a href="https://github.com/stat220/05-Data-Wrangling" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
 <p><span style="color:orange"><strong>Wednesday, 01/19</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
 <p>Finish HW2 by 10 PM, and start working on Group HW2. The first midterm will be held in class on Friday, 01/22.</p>
+<div class="alert alert-note">
+  <div>
+    Please read <a href="https://rafalab.github.io/dsbook/joining-tables.html">Irizarry Chapter 22</a>, <a href="https://r4ds.had.co.nz/relational-data.html#introduction-7">GW Chapter 13</a>(optional)
+  </div>
+</div>
 
           </div>
 
