--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -835,6 +835,8 @@ Before Class  Please read GW Chapter 5, Irizarry Sections 4.1-4.11(optional), an
     Please read <a href="https://style.tidyverse.org/">R Style Guide Chapters 2,4, and 5</a>,  <a href="https://rafalab.github.io/dsbook/joining-tables.html">Irizarry Chapter 23</a>, <a href="https://r4ds.had.co.nz/relational-data.html#introduction-7">GW Chapter 13</a>(optional)
   </div>
 </div>
+<p>It would also be nice to go over this short video in <a href="https://www.youtube.com/watch?v=Yg-pNqzDuN4" target="_blank" rel="noopener">joining data with <code>dplyr</code></a>.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Yg-pNqzDuN4?start=10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           </div>
 
