--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -840,7 +840,7 @@ Before Class  Please read GW Chapter 5, Irizarry Sections 4.1-4.11(optional), an
 <h3 id="in-class-1">In Class</h3>
 <ul>
 <li>More data wrangling</li>
-<li>Basic data joins (two-verbs)</li>
+<li>Basic data joins (two-table verbs)</li>
 </ul>
 <p>Day 7 Slides (<a href="/pdf/Day7/Day7.pdf" target="_blank">pdf</a>/<a href="/pdf/Day7/Day7.html" target="_blank">html</a>)</p>
 <ul>
