--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -846,6 +846,12 @@ Before Class  Please read GW Chapter 5, Irizarry Sections 4.1-4.11(optional), an
 <ul>
 <li>Link to <a href="https://github.com/stat220/06-data-joins" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
+<p><span style="color:orange"><strong>Friday, 01/21</strong></span></p>
+<div class="alert alert-note">
+  <div>
+    MIDTERM I
+  </div>
+</div>
 
           </div>
 
