--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -706,6 +706,10 @@ dplyr Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.a
       
 
 
+  <li class=""><a href="/courses/stat220/week4/">Week 4</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week3/">Week 3</a></li>
 
 
