--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -728,6 +728,10 @@
 
 
 
+  <li class=""><a href="/courses/stat220/data/">datasets</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
