--- a/public/courses/stat220/rstudio-in-stat-220/index.html
+++ b/public/courses/stat220/rstudio-in-stat-220/index.html
@@ -739,6 +739,10 @@ There will be a lot of Rstudio content thrown your way this term, most in the fo
 
 
 
+  <li class=""><a href="/courses/stat220/data/">datasets</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
