--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -736,6 +736,10 @@ Before Class  Please read GW Chapter 5, Irizarry Sections 4.1-4.11(optional), an
 
 
 
+  <li class=""><a href="/courses/stat220/data/">datasets</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
