--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -736,6 +736,10 @@ Before Class  Please read GW Chapter 12 on tidy data and reshaping data. Start w
 
 
 
+  <li class=""><a href="/courses/stat220/data/">datasets</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
