--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -849,6 +849,15 @@ Before Class  Please read GW Chapter 12 on tidy data and reshaping data. Start w
 <ul>
 <li>Link to <a href="https://github.com/stat220/08-data-imports" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
+<p><span style="color:orange"><strong>Friday, 01/28</strong></span></p>
+<h3 id="before-class-2">Before Class</h3>
+<p>Please go over the group homework 3 and come to class with questions. I will also go over previous homeworks and will take any questions you may have on the homeworks. Come prepared! Homework solutions will be uploaded to the <a href="https://github.com/stat220/ClassResources" target="_blank" rel="noopener">github repo on class resources</a>. Group homework solutions will be provided to the respective repos.</p>
+<p>I will also detail our first paired mini-project for the quarter during class.</p>
+<div class="alert alert-note">
+  <div>
+    Please gently read <a href="https://r4ds.had.co.nz/data-import.html">GW Chapter 14</a> on strings and regular expressions.
+  </div>
+</div>
 
           </div>
 
