--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -855,7 +855,7 @@ Before Class  Please read GW Chapter 12 on tidy data and reshaping data. Start w
 <p>I will also detail our first paired mini-project for the quarter during class.</p>
 <div class="alert alert-note">
   <div>
-    Please gently read <a href="https://r4ds.had.co.nz/data-import.html">GW Chapter 14</a> on strings and regular expressions.
+    Please gently read <a href="https://r4ds.had.co.nz/strings.html">GW Chapter 14</a> on strings and regular expressions.
   </div>
 </div>
 
